Remove unused classes and fix soem typos along the way.